syntax = "proto3";
package types;
option go_package = "ms.api/protos/pb/types";

import "google/protobuf/any.proto";

// GraphQL API response
message Response {
  string message = 1;
  bool success = 2;
  int32 code = 3;
  string token = 4;
}

// Person type
message Person {
  string id = 1;
  string title = 2;
  string first_name = 3;
  string last_name = 4;
  string middle_name = 5;
  repeated PhoneNumber phones = 6;
  repeated Email emails = 7;
  string dob = 8;
  string country_residence = 9;
  repeated string nationality = 10;
  repeated Address addresses = 11;
  string employer = 12;
  repeated Identity identities = 13;
  int32 ts = 14;
}

// Persons type
message Persons {
  repeated Person persons = 1;
}

// Address type
message Address {
  string flat_number = 1;
  string building_number = 2;
  string building_name = 3;
  string street = 4;
  string sub_street = 5;
  string town = 6;
  string state = 7;
  string postcode = 8;
  string country = 9;
}

// Device type
message Device {
  string os = 1;
  string brand = 2;
  string deviceToken = 3;
  string deviceId = 4;
}

// Email type
message Email {
  string Value = 1;
  bool Verified = 2;
}

// PhoneNumber type
message PhoneNumber {
  string Number = 1;
  bool Verified = 2;
}

// Cdd type
message Cdd {
  string id = 1;
  string owner = 2;
  string details = 3;
  string status = 4;
  Kyc kyc = 5;
  Aml aml = 6;
  Roava roava = 7;
  Cra cra = 8;
  string created_at = 9;
  string updated_at = 10;
}

// Kyc type
message Kyc {
  string id = 1;
  Applicant applicant = 2;
  string status = 3;
  string vendor = 4;
  string created_at = 5;
  string updated_at = 6;
}


message Aml {
  string created_at = 1;
  string updated_at = 2;
  string title = 3;
  string person_id = 4;
  string first_name = 5;
  string last_name = 6;
  string middle_name = 7;
  string date_of_birth = 8;
  string email = 9;
  string nationality = 10;
  google.protobuf.Any reports = 11; // Excluded from customers on the public graph.
  string status = 12;
}

// Roava type
message Roava {}

// Cra type
message Cra {}

message Applicant {
  string application_id = 1;
  string applicant_id = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string dob = 6;
  Address address = 7;
  string vendor = 8;
}

// Country type
message Country {
  string countryId = 1;
  string capital = 2;
  string countryName = 3;
  string continent = 4;
  string dial = 5;
  string geoNameId = 6;
  string ISO4217CurrencyAlphabeticCode = 7;
  int32 ISO4217CurrencyNumericCode = 8;
  string isIndependent = 9;
  string languages = 10;
  string officialNameEnglish = 11;
  string deviceId = 12;
}

// Payee type
message Payee {
  string payeeId = 1;
  string name = 2;
  string owner = 3;
  repeated Account accounts = 4;
  string phonenumber = 5;
}

// Account type
message Account {
  string accountName = 1;
  string accountNumber = 2;
  string sortCode = 3;
  string bankCode = 4;
  string routingNumber = 5;
  string BIC = 6;
  string IBAN = 7;
  string country = 8;
  string bankName = 9;
  string routingType = 10;
  string shortCode = 11;
  string balance = 12;
  string currencyCode = 13;
  string currencySymbol = 14;
}

// Identity type
message Identity {
  string id = 1;
  string owner = 2;
  string nickname = 3;
  Organisation organisation = 4;
  bool active = 5;
  bool authentication = 6;
  repeated Device devices = 7;
  Credentials credentials = 8;
}

// Credentials type
message Credentials {
  string identifier = 1;
  string refresh_token = 2;
}

// Organisation type
message Organisation {
  string id = 1;
  string name = 2;
  string keywords = 3;
  string description = 4;
  string domain = 5;
  string banner = 6;
  float revenue = 7;
  string language = 8;
  float raised = 9;
  string employees = 10;
  string email = 11;
  repeated Address addresses = 12;
  OrgLocation location = 13;
  repeated Industry industries = 14;
  Social social = 15;
  repeated ImageAssets image_assets = 16;
  repeated Identity identities = 17;
}

// OrgLocation type
message OrgLocation {
  string continent = 1;
  string country = 2;
  string state = 3;
  string city = 4;
  string country_code = 5;
}

// Industry type
message Industry {
  string id = 1;
  int64 code = 2;
  float score = 3;
  string  section = 4;
  string description = 5;
  string source = 6;
}

// Social type
message Social {
  string youtube = 1;
  string github = 2;
  string facebook = 3;
  string pinterest = 4;
  string instagram = 5;
  string linkedin = 6;
  string medium = 7;
  string crunchbase = 8;
  string twitter = 9;
}

// ImageAssets type
message ImageAssets {
  bool safe = 1;
  string type = 2;
  string image = 3;
  string svg = 4;
}